--- a/BZ.WindowsService/BZ.WindowsService/BZ.WindowsService.csproj
+++ b/BZ.WindowsService/BZ.WindowsService/BZ.WindowsService.csproj
@@ -73,8 +73,10 @@
     <Compile Include="Bootstrapper.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converter\MsecToSecConverter.cs" />
     <Compile Include="Helper\ConfigHelper.cs" />
     <Compile Include="Helper\ServiceHelper.cs" />
+    <Compile Include="Model\PluginSettingModel.cs" />
     <Compile Include="Pages\ShellView.xaml.cs">
       <DependentUpon>ShellView.xaml</DependentUpon>
     </Compile>
@@ -120,9 +122,7 @@
       <Name>BZ.WindowsService.Common</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Model\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
