--- a/BZ.WindowsService/BZ.WindowsService/packages.config
+++ b/BZ.WindowsService/BZ.WindowsService/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Fody" version="3.3.5" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net461" />
   <package id="Stylet" version="1.1.22" targetFramework="net461" />
   <package id="Stylet.Start" version="1.1.22" targetFramework="net461" />
