--- a/BZ.WindowsService/BZ.WindowsService/BZ.WindowsService.csproj
+++ b/BZ.WindowsService/BZ.WindowsService/BZ.WindowsService.csproj
@@ -77,11 +77,16 @@
       <HintPath>..\lib\RCWPF\2018.3.1016.45\Telerik.Windows.Controls.Input.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Telerik.Windows.Controls.Navigation, Version=2018.3.1016.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+      <HintPath>..\lib\RCWPF\2018.3.1016.45\Telerik.Windows.Controls.Navigation.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Telerik.Windows.Data, Version=2018.3.1016.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
       <HintPath>..\lib\RCWPF\2018.3.1016.45\Telerik.Windows.Data.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Telerik.Windows.Themes.Crystal">
+    <Reference Include="Telerik.Windows.Themes.Crystal, Version=2018.3.1016.45, Culture=neutral, PublicKeyToken=5803cfa389c90ce7, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
       <HintPath>..\lib\RCWPF\2018.3.1016.45\Telerik.Windows.Themes.Crystal.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
@@ -165,13 +170,13 @@
     <Resource Include="FodyWeavers.xml" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\BZ.WindowsService.Common\BZ.WindowsService.Common.csproj">
-      <Project>{1305D500-EFF5-4DDA-9A18-113E22D69741}</Project>
-      <Name>BZ.WindowsService.Common</Name>
-    </ProjectReference>
+    <Resource Include="Resources\service.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\service.ico" />
+    <ProjectReference Include="..\BZ.WindowsService.Common\BZ.WindowsService.Common.csproj">
+      <Project>{d5726cc3-34c2-4e2c-9f88-702856f70a8b}</Project>
+      <Name>BZ.WindowsService.Common</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
