--- a/Book/Book/packages.config
+++ b/Book/Book/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="ControlzEx" version="4.0.0-alpha0222" targetFramework="net461" />
   <package id="Fody" version="3.3.5" targetFramework="net461" developmentDependency="true" />
+  <package id="HtmlAgilityPack" version="1.8.14" targetFramework="net461" />
   <package id="MahApps.Metro" version="2.0.0-alpha0212" targetFramework="net461" />
   <package id="MahApps.Metro.IconPacks" version="3.0.0-alpha0103" targetFramework="net461" />
   <package id="Microsoft.Xaml.Behaviors.Wpf" version="1.0.1" targetFramework="net461" />
