修改扒图插件

--- a/BZ.WindowsService/PluginTests/PluginTests.csproj
+++ b/BZ.WindowsService/PluginTests/PluginTests.csproj
@@ -50,9 +50,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="PicReptilePluginTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Plugins\MeizituReptile\MeizituReptile.csproj">
+      <Project>{35BAB0C9-8543-473D-A7D3-CE80C93AC909}</Project>
+      <Name>MeizituReptile</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
