--- a/Book/Book/packages.config
+++ b/Book/Book/packages.config
@@ -73,6 +73,7 @@
   <package id="Newtonsoft.Json" version="12.0.1" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="2.6.0" targetFramework="net461" />
   <package id="Remotion.Linq" version="2.2.0" targetFramework="net461" />
+  <package id="SharpZipLib" version="1.1.0" targetFramework="net461" />
   <package id="SQLitePCLRaw.bundle_green" version="1.1.11" targetFramework="net461" />
   <package id="SQLitePCLRaw.core" version="1.1.11" targetFramework="net461" />
   <package id="SQLitePCLRaw.lib.e_sqlite3.linux" version="1.1.11" targetFramework="net461" />
