--- a/Book/Book/Book.csproj
+++ b/Book/Book/Book.csproj
@@ -20,10 +20,10 @@
     </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
+    <PlatformTarget>x86</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
@@ -383,6 +383,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Command.cs" />
+    <Compile Include="Common\Cmder.cs" />
     <Compile Include="Common\ExtensionMethods.cs" />
     <Compile Include="Common\WebHelper.cs" />
     <Compile Include="Common\ZipHelper.cs" />
@@ -391,6 +392,7 @@
     <Compile Include="Converters\VisbilityToBooleanConverter.cs" />
     <Compile Include="ExportMethods\EpubExport.cs" />
     <Compile Include="ExportMethods\IExport.cs" />
+    <Compile Include="ExportMethods\MobiExport.cs" />
     <Compile Include="Pages\ExportView.xaml.cs">
       <DependentUpon>ExportView.xaml</DependentUpon>
     </Compile>
@@ -489,6 +491,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\style.css" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\kindlegen.exe" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
