修改View和ViewModel绑定方式

--- a/Book/BookApp.Ndro/BookApp.Ndro/BookApp.Ndro.csproj
+++ b/Book/BookApp.Ndro/BookApp.Ndro/BookApp.Ndro.csproj
@@ -30,5 +30,8 @@
     <EmbeddedResource Update="View\SearchPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="View\SettingPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
