--- a/Book/BookApp.Api/BookApp.Api.csproj
+++ b/Book/BookApp.Api/BookApp.Api.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
+    <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.15" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\BookAPP.Entity\BookAPP.Entity.csproj" />
   </ItemGroup>
 
 </Project>
