--- a/Book/Biblioteca del Papa/packages.config
+++ b/Book/Biblioteca del Papa/packages.config
@@ -4,6 +4,7 @@
   <package id="EntityFramework.zh-Hans" version="6.2.0" targetFramework="net452" />
   <package id="Fody" version="4.2.1" targetFramework="net452" developmentDependency="true" />
   <package id="HtmlAgilityPack" version="1.11.4" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
   <package id="PropertyChanged.Fody" version="2.6.1" targetFramework="net452" />
   <package id="Stylet" version="1.1.22" targetFramework="net45" />
   <package id="Stylet.Start" version="1.1.22" targetFramework="net45" />
