--- a/Book/CUI/CUI.csproj
+++ b/Book/CUI/CUI.csproj
@@ -52,6 +52,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -66,7 +67,23 @@
     <Reference Include="PresentationFramework" />
   </ItemGroup>
   <ItemGroup>
-    <Page Include="Themes\CWindow.xaml">
+    <Compile Include="RelayCommand.cs" />
+    <Compile Include="WindowClass\ComGuids.cs" />
+    <Compile Include="WindowClass\Debug.cs" />
+    <Compile Include="WindowClass\DoubleUtil.cs" />
+    <Compile Include="WindowClass\DpiHelper.cs" />
+    <Compile Include="WindowClass\ErrorCodes.cs" />
+    <Compile Include="WindowClass\Helper\DpiHelper.cs" />
+    <Compile Include="WindowClass\MessageWindow.cs" />
+    <Compile Include="WindowClass\NativeMethods.cs" />
+    <Compile Include="WindowClass\ShellProvider.cs" />
+    <Compile Include="WindowClass\StreamHelper.cs" />
+    <Compile Include="WindowClass\Utilities.cs" />
+    <Compile Include="WindowClass\Utilities.Windows.cs" />
+    <Compile Include="WindowClass\Utilities.Wpf.cs" />
+    <Compile Include="WindowClass\Verify.cs" />
+    <Compile Include="WindowClass\WindowResizer.cs" />
+    <Page Include="Themes\GlassWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -79,7 +96,7 @@
       <SubType>Designer</SubType>
     </Page>
     <Compile Include="Controls\BusyBox.cs" />
-    <Compile Include="Controls\CWindow.cs" />
+    <Compile Include="Controls\GlassWindow.cs" />
     <Compile Include="Controls\ProgressRing.cs" />
     <Page Include="Themes\ProgressRing.xaml">
       <SubType>Designer</SubType>
