--- a/Book/BookReading/BookReading.csproj
+++ b/Book/BookReading/BookReading.csproj
@@ -122,9 +122,11 @@
     <Compile Include="BookContext.cs" />
     <Compile Include="BookContextInitializer.cs" />
     <Compile Include="Bootstrapper.cs" />
+    <Compile Include="Converters\EnumToStringConverter.cs" />
     <Compile Include="Entities\BookShowModel.cs" />
     <Compile Include="Entities\CategoryShowModel.cs" />
     <Compile Include="Entities\ChapterShowModel.cs" />
+    <Compile Include="Entities\FinderStatusModel.cs" />
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\SearchViewModel.cs" />
     <Compile Include="ViewModels\ShellViewModel.cs" />
@@ -173,6 +175,10 @@
     </Page>
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\BookReading.Libs\BookReading.Libs.csproj">
+      <Project>{0361A09D-D98D-492C-9300-7FC51070871C}</Project>
+      <Name>BookReading.Libs</Name>
+    </ProjectReference>
     <ProjectReference Include="..\CUI\CUI.csproj">
       <Project>{daf5a783-a753-4a72-a915-4b7af54d2913}</Project>
       <Name>CUI</Name>
