--- a/Book/BookReading/BookReading.csproj
+++ b/Book/BookReading/BookReading.csproj
@@ -62,6 +62,9 @@
     <Prefer32Bit>true</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AutoMapper, Version=8.1.1.0, Culture=neutral, PublicKeyToken=be96cd2c38ef1005, processorArchitecture=MSIL">
+      <HintPath>..\packages\AutoMapper.8.1.1\lib\net461\AutoMapper.dll</HintPath>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
     </Reference>
@@ -123,6 +126,7 @@
     <Compile Include="BookContextInitializer.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Converters\EnumToStringConverter.cs" />
+    <Compile Include="DTOMapper.cs" />
     <Compile Include="Entities\BookShowModel.cs" />
     <Compile Include="Entities\CategoryShowModel.cs" />
     <Compile Include="Entities\ChapterShowModel.cs" />
