--- a/Book/BookReading/packages.config
+++ b/Book/BookReading/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AutoMapper" version="8.1.1" targetFramework="net461" />
   <package id="cef.redist.x64" version="73.1.13" targetFramework="net461" />
   <package id="cef.redist.x86" version="73.1.13" targetFramework="net461" />
   <package id="CefSharp.Common" version="73.1.130" targetFramework="net461" />
