--- a/Book/BookReading/packages.config
+++ b/Book/BookReading/packages.config
@@ -1,12 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="8.1.1" targetFramework="net461" />
-  <package id="cef.redist.x64" version="73.1.13" targetFramework="net461" />
-  <package id="cef.redist.x86" version="73.1.13" targetFramework="net461" />
-  <package id="CefSharp.Common" version="73.1.130" targetFramework="net461" />
-  <package id="CefSharp.Wpf" version="73.1.130" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Fody" version="5.0.6" targetFramework="net461" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net461" />
   <package id="PropertyChanged.Fody" version="3.0.1" targetFramework="net461" />
   <package id="SQLite.CodeFirst" version="1.5.2.28" targetFramework="net461" />
   <package id="Stylet" version="1.2.0" targetFramework="net461" />
